# ngen

./: .gitignore  .gitmodules  .gn  BUILD.gn  CMakeLists.txt  README.md
cmake/: copy.cmake  dxc.cmake  texture.cmake
core/: BUILD.gn  CMakeLists.txt  allocator.cpp  allocator.h  allocator_internal.cpp  allocator_internal.h  bit_stream.cpp  bit_stream.h  build.h  command_line.cpp  command_line.h  compiler.h  core.natvis  core_allocators.cpp  core_allocators.h  core_init.cpp  core_init.h  debug.h  debug_linux.cpp  debug_win.cpp  dynamic_array.h  dynamic_array.inl  dynamic_lib.h  dynamic_lib_linux.cpp  dynamic_lib_win.cpp  file.cpp  file.h  file_linux.cpp  file_win.cpp  fixed_array.h  fixed_array.inl  free_list_allocator.cpp  free_list_allocator.h  hash.cpp  hash.h  hash_table.h  hash_table.inl  hash_table2.h  hash_table2.inl  intrusive_list.h  (+36 more)
core/gpu/: gpu.cpp  gpu.h  texture.gni
core/gpu/d3d12/: d3d12.cpp  d3d12.h
core/gpu/vulkan/: vulkan.cpp  vulkan.h  vulkan_loader.cpp
core/loader/: dae.cpp  dae.h  dds.cpp  dds.h  obj.cpp  obj.h  png.cpp  png.h  tga.cpp  tga.h  ttf.cpp  ttf.h  xml.cpp  xml.h
core/math/: float.h  float.inl  gdb_math.py  mat4.h  mat4.inl  math.natvis  plane.h  quat.h  quat.inl  ray.h  ray.inl  sphere.h  transform.h  transform.inl  triangle.h  vec2.h  vec2.inl  vec3.h  vec3.inl  vec4.h  vec4.inl
core/reflection/: reflection.cpp  reflection.gni  reflection.h  reflection_parser.cpp  reflection_wrapper.py  template.reflection.cpp
core/window/: input.h  window.h  window_win.cpp  window_x11.cpp
docs/: c++_convention.txt
eins/: BUILD.gn  CMakeLists.txt  cam.cpp  cam.h  cube.hlsl  eins.cpp  pbr.hlsl  shader.hlsl  shadow.hlsl
sample/: BUILD.gn  CMakeLists.txt  cam.cpp  cam.h  dae_sample.cpp  dx12_sample.cpp  font_sample.cpp  gpu_sample.cpp  hash_table.cpp  net.cpp  png_sample.cpp  quake_console.cpp  quake_console.h  reflection.cpp  reflection_sample.cpp  rtt.hlsl  sample.cpp  shader.hlsl  shader_ps.spv  shadow.hlsl  test_reflection_class.h  text.hlsl  ui.hlsl  vulkan_loader.cpp  vulkan_loader.h  vulkan_sample.cpp
scripts/: refactor.bat  setup.sh  update_copyright_year.bat
test/: BUILD.gn  CMakeLists.txt  main.cpp  test.h
test/core/: bit_stream_test.cpp  command_line_test.cpp  dynamic_array_test.cpp  hash_map_test.cpp  intrusive_list_test.cpp  linear_allocator_test.cpp  path_test.cpp  string_test.cpp  string_utils_test.cpp  utils_test.cpp
test/core/loader/: xml_test.cpp
