##----------------------------------------------------------------------------##
## This file is distributed under the MIT License.                            ##
## See LICENSE.txt for details.                                               ##
## Copyright (C) Tran Tuan Nghia <trantuannghia95@gmail.com> 2022             ##
##----------------------------------------------------------------------------##

import("//third_party/dxc/dxc.gni")

executable("eins") {
  sources = [
    "cam.cpp",
    "cam.h",
    "eins.cpp",
  ]

  deps = [
    "//assets",
    "//core",
    ":shaders_spirv",
    ":shaders_hlsl",
  ]
}

dxc("shaders") {
  shaders = [
    [ "cube.hlsl", "VSMain", "vs_5_0", "cube_vs" ],
    [ "cube.hlsl", "PSMain", "ps_5_0", "cube_ps" ],
    [ "shadow.hlsl", "VSMain", "vs_5_0", "shadow_vs" ],
    [ "shader.hlsl", "VSMain", "vs_5_0", "shader_vs" ],
    [ "shader.hlsl", "PSMain", "ps_5_0", "shader_ps" ],
    [ "pbr.hlsl", "VSMain", "vs_5_0", "pbr_vs" ],
    [ "pbr.hlsl", "PSMain", "ps_5_0", "pbr_ps" ],
  ]
}
