##----------------------------------------------------------------------------##
## This file is distributed under the MIT License.                            ##
## See LICENSE.txt for details.                                               ##
## Copyright (C) Tran Tuan Nghia <trantuannghia95@gmail.com> 2022             ##
##----------------------------------------------------------------------------##

import("//core/reflection/reflection.gni")
import("//third_party/dxc/dxc.gni")

group("sample") {
  deps = [
    ":dx12_sample",
  ]
}

executable("net_sample") {
  sources = [
    "net.cpp",
    "reflection.hpp",
  ]

  deps = [
    "//core",
  ]

  if (is_win) {
    libs = [
      "Ws2_32.lib",
    ]
  }
}

executable("reflection_sample") {
  sources = [
    "reflection_sample.cpp",
  ]

  deps = [
    ":test_reflection",
    "//core",
  ]
}

reflection("test_reflection") {
  headers = [
    "test_reflection_class.h",
  ]
}

executable("vulkan_sample") {
  sources = [
    "cam.cpp",
    "cam.h",
    "vulkan_loader.cpp",
    "vulkan_loader.h",
    "vulkan_sample.cpp",
  ]

  configs += [
    "//third_party/vulkan:vulkan_config",
  ]

  deps = [
    "//assets",
    "//core",
    ":shaders_spirv",
  ]
}
executable("dx12_sample") {
  sources = [
    "cam.cpp",
    "cam.h",
    "dx12_sample.cpp",
    "quake_console.cpp",
    "quake_console.h",
  ]

  deps = [
    ":shaders_hlsl",
    "//assets",
    "//core",
    "//third_party/libclang",
  ]

  libs = [
    "D3D12.lib",
    "D3DCompiler.lib",
    "DXGI.lib",
  ]
}

executable("hash_table") {
  sources = [
    "hash_table.cpp",
  ]

  deps = [
    "//core",
  ]
}

dxc("shaders") {
  shaders = [
    [ "shadow.hlsl", "VSMain", "vs_5_0", "shadow_vs" ],
    [ "shader.hlsl", "VSMain", "vs_5_0", "shader_vs" ],
    [ "shader.hlsl", "PSMain", "ps_5_0", "shader_ps" ],
    [ "ui.hlsl", "VSTextureMain", "vs_5_0", "ui_texture_vs" ],
    [ "ui.hlsl", "PSTextureMain", "ps_5_0", "ui_texture_ps" ],
    [ "ui.hlsl", "VSNonTextureMain", "vs_5_0", "ui_non_texture_vs" ],
    [ "ui.hlsl", "PSTextureMain", "ps_5_0", "ui_non_texture_ps" ],
  ]
}
