##----------------------------------------------------------------------------##
## This file is distributed under the MIT License.                            ##
## See LICENSE.txt for details.                                               ##
## Copyright (C) Tran Tuan Nghia <trantuannghia95@gmail.com> 2022             ##
##----------------------------------------------------------------------------##

import("//core/reflection/reflection.gni")

group("sample") {
  deps = [
    ":dae_sample",
    ":net_sample",
    ":reflection_sample",
    ":hash_table",
  ]
}

executable("temp_sample") {
  sources = [
    "sample.cpp",
  ]

  deps = [
    "//assets",
    "//core",
  ]
}

executable("dae_sample") {
  sources = [
    "dae_sample.cpp",
  ]

  deps = [
    "//assets",
    "//core",
  ]
}

executable("net_sample") {
  sources = [
    "net.cpp",
    "reflection.hpp",
  ]

  deps = [
    "//core",
  ]

  if (is_win) {
    libs = [
      "Ws2_32.lib",
    ]
  }
}

executable("reflection_sample") {
  sources = [
    "reflection_sample.cpp",
  ]

  deps = [
    ":test_reflection",
    "//core",
  ]
}

reflection("test_reflection") {
  headers = [
    "test_reflection_class.h",
  ]
}

executable("png_sample") {
  sources = [
    "png_sample.cpp",
  ]

  deps = [
    "//assets",
    "//core",
  ]
}

executable("hash_table") {
  sources = [
    "hash_table.cpp",
  ]

  deps = [
    "//core",
  ]
}
