##----------------------------------------------------------------------------##
## This file is distributed under the MIT License.                            ##
## See LICENSE.txt for details.                                               ##
## Copyright (C) Tran Tuan Nghia <trantuannghia95@gmail.com> 2022             ##
##----------------------------------------------------------------------------##

group("test") {
  deps = [
    ":core_test",
  ]
}

executable("core_test") {
  sources = [
    # "core/dynamic_array_test.cpp",
    "core/hash_map_test.cpp",
    "core/linear_allocator_test.cpp",
    "core/path_test.cpp",
    "core/string_test.cpp",
    "core/string_utils_test.cpp",
    "core/utils_test.cpp",
    "main.cpp",
  ]

  deps = [
    "//core",
  ]
}
